2004-05-13  Karl Runge <runge@karlrunge.com>
	* improvements to -accept popup: yes/no buttons and timeout. 

2004-05-08  Karl Runge <runge@karlrunge.com>
	* add -accept some-command/xmessage/popup to prompt local X11 user
	  or otherwise decide to accept an incoming client. 
	* clean up -Wall warnings.

2004-05-05  Karl Runge <runge@karlrunge.com>
	* enable mouse button -> keystrokes mapping in -buttonmap (mousewheel)
	* enable keystroke -> mouse button mapping in -remap (touchpad paste)
	  (-remap incompat ':' -> '-', sorry...)
	* shm OS blacklist (i.e. <= SunOS 5.8) -> -onetile
	* revert to check_user_input() under -nofb
	* cleanup: lastmod, remove tile_shm and update_client_pointer,
	  debug output, rfbPort failure. 
	* user friendly last line: 'The VNC desktop is hostname:0'

2004-04-28  Karl Runge <runge@karlrunge.com>
	* -auth cmdline option for xauthority.
	* decrease default deferupdate under -nofb.
	* update_client_pointer() from Edoardo Tirtarahardja.
	* remove some assumptions about libvncserver defaults.

2004-04-19  Karl Runge <runge@karlrunge.com>
	* support for cursor positions updates -cursorpos
	* option for SIGPIPE handling -sigpipe

2004-04-13  Karl Runge <runge@karlrunge.com>
	* solve problem with sending selection when client initializing
	  (not yet in RFB_NORMAL state).  Increase delay to 15s as well. 
	* when threaded: limit rfbMaxClientWait to >= 20 secs and
	  increase it to a huge value unless -rfbwait is supplied.

2004-04-08  Karl Runge <runge@karlrunge.com>
	* added support for blacking out regions of the screen, primarily
	  for Xinerama usage, options: -blackout -xinerama
	* Xinerama workaround mouse problem on 'embedded' system, 
	  option -xwarppointer (XWarpPointer instead of XTEST)
	* let -remap option take key remappings on cmdline as well as file.
	* use cargs fix to test for invalid cmdline options. Add --option.
	* remove copy_tile, use copy_tiles(..., 1) instead.

2004-03-10  Karl Runge <runge@karlrunge.com>