@@ -1,5 +1,6 @@
-2004-05-13  Karl Runge <runge@karlrunge.com>
+2004-05-14  Karl Runge <runge@karlrunge.com>
 	* improvements to -accept popup: yes/no buttons and timeout. 
+	* less fprintf under -q so '-q -inetd' has no stderr output. 
 
 2004-05-08  Karl Runge <runge@karlrunge.com>
 	* add -accept some-command/xmessage/popup to prompt local X11 user
